feat: introduce JUnit5 extension mode and harden runtime/test integrations